--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "throbber",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Simple Console Throbber",
   "main": "index.js",
+
   "scripts": {
     "test": "node test.js"
+  },
+  "repository" : { 
+    "type" : "git",
+    "url" : "https://github.com/silentrob/throbber"
   },
   "keywords": [
     "Throbber"
